@@ -10,6 +10,9 @@
 5.   Updated Qt products to version 5.4.1 on Windows.
 6.   Do not update status information in spoton_misc::saveGemini().
 7.   Maximized strict-overflow's level.
+8.   Serialize StarBeam data.
+9.   Modified the StarBeam Analysis tool so that is records the
+     missing pulse immediately preceding the first missed pulse.
 
 0.19 (02/22/2015)
 
